UI alignment fix.

--- a/src/app/note/note.component.css
+++ b/src/app/note/note.component.css
@@ -1,4 +1,4 @@
-.note {
+.info {
     border-left: 5px solid #598fe5;
     background-color: azure;
     padding: 15px;
